--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "prod": "NODE_ENV=production node index.js"
   },
   "author": "",
   "license": "ISC",
