--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "mongodb": "^3.1.12",
     "mongoose": "^5.4.4",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
