--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "projectk",
-  "version": "1.0.0",
-  "description": "server",
-  "main": "server.js",
-  "engines": {
-    "node": "8.1.1",
-    "npm": "5.0.3"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.4",
-    "nodemon": "^1.18.9",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
-  }
+    "name": "projectk",
+    "version": "1.0.0",
+    "description": "server",
+    "main": "server.js",
+    "engines": {
+        "node": "8.1.1",
+        "npm": "5.0.3"
+    },
+    "scripts": {
+        "start": "node server.js",
+        "dev": "nodemon server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cookie-session": "^2.0.0-beta.3",
+        "express": "^4.16.4",
+        "mongoose": "^5.4.4",
+        "nodemon": "^1.18.9",
+        "passport": "^0.4.0",
+        "passport-google-oauth20": "^1.0.0"
+    }
 }
