--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
         "start": "node server.js",
         "server": "nodemon server.js",
         "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.18.3",
         "concurrently": "^4.1.0",
         "cookie-session": "^2.0.0-beta.3",
         "express": "^4.16.4",
         "mongoose": "^5.4.4",
         "nodemon": "^1.18.9",
         "passport": "^0.4.0",
-        "passport-google-oauth20": "^1.0.0"
+        "passport-google-oauth20": "^1.0.0",
+        "stripe": "^6.25.1"
     }
 }
