--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "npm": "5.0.3"
     },
     "scripts": {
-        "start": "node index.js",
+        "start": "node server.js",
         "server": "nodemon server.js",
         "client": "npm run start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
