--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
     "name": "projectk",
     "version": "1.0.0",
     "description": "server",
-    "main": "server.js",
+    "main": "index.js",
     "engines": {
         "node": "8.1.1",
         "npm": "5.0.3"
     },
     "scripts": {
-        "start": "node server.js",
-        "server": "nodemon server.js",
+        "start": "node index.js",
+        "server": "nodemon index.js",
         "client": "npm run start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
