--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,11 @@
         "react-dom": "^16.7.0",
         "react-redux": "^6.0.1",
         "react-router-dom": "^4.3.1",
-        "react-scripts": "^2.1.5",
+        "react-scripts": "^2.1.8",
         "react-stripe-checkout": "^2.6.3",
         "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^4.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
